[package]
name = "ephemerole"
version = "0.1.0"
edition = "2021"
description = "A simple discord bot to track user activity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/ephemerole"
keywords = ["discord", "discord-bot"]
categories = ["games"]
default-run = "ephemerole"

[dependencies]
# tokio is maintained by multiple large companies
tokio = { version = "1", features = ["rt", "macros", "signal"] }
# twilight is an open-source project with a long history. https://github.com/twilight-rs/twilight
twilight-gateway = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
# ahash is a well-known rust library for a faster HashMap
ahash = "0.8"
