[package]
name = "ephemerole-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio is maintained by multiple large companies
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
# twilight is an open-source project with a long history. https://github.com/twilight-rs/twilight
twilight-gateway = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
# serde_json is maintained by David Tolnay, a Rust project member
serde_json = "1"
# ephemerole is the main package
ephemerole = { path = "../" }
