[package]
name = "ephemerole-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# twilight is an open-source project with a long history. https://github.com/twilight-rs/twilight
twilight-model = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"

# ephemerole is the main package
ephemerole = { path = "../" }
